Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.2.0, 5.2.1
-
Fix Version/s: 5.3.0
-
Component/s: QML: Declarative and Javascript Engine
-
Labels:None
-
Commits:7d25db8ff452926e58b7a66608666b35c194fc69
Description
Loading the following code via WorkerScript will result in "Invalid write to global property 'func'" in 5.2:
"jstest.js"
function func() {
console.log("success!")
}
"JsTest.qml"
WorkerScript {
id: worker
source: "jstest.js"
}
An example that can be run via qmlscene is attached.
This is a regression against 5.1.x.
Attachments
Issue Links
- relates to
-
QTBUG-36881 Regression: tst_QQuickWorkerScript::script_included() failing in Qt 5.2
-
- Closed
-